--- a/style.css
+++ b/style.css
@@ -89,3 +89,9 @@ footer{
     font-size: larger;
     font-family: 'Roboto',sans-serif;
 }
+.hoverable:hover{
+    border-style: solid;
+    border-color: black;
+    border: 3px;
+    background-color: #DCF1F5;
+}
