--- a/style.css
+++ b/style.css
@@ -1,97 +1,94 @@
 body{
+    margin: 0px;
+    background-color: #f6f6f6;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    line-height: 1.6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container{
+    margin-top: 70px;
+    width: 450px;
+    background-color: #aaa;
+    border: 2px solid black;
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 200px;
-    margin-top: 100px;
-    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+    padding: 20px;
 }
-.calc{
+#io-box{
+    width: 100%;
+    height: 120px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 2px solid black;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    height: 450px;
-    width: auto;
-    border: 2px;
-    border-color: black;
-    border-style: solid;
-    border-radius: 13px;
-    padding: 18px;
-    background-color: #96a399;
-    gap: 10px;
-    font-style: inherit;
-}
-.calculator-screen{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-end;
-    gap: 8px;
-    border: 2px;
-    border-style: solid;
-    border-color: black;
+    padding-right: 20px;
+    padding-bottom: 2px;
+    background-color: #eee;
+    font-size: 40px;
+    padding-top: 2px;
+}
+.remove{
+    display: flex;
+    flex-flow: row nowrap;
+    width: 100%;
     padding: 10px;
-    background-color: white;
-    font-style: inherit;
+    padding-top: 25px;
+    padding-bottom: 12px;
+    gap: 15px;
 }
-.clear{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    font-style: inherit;
-}
-.calculator-body{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 5px;
-    font-style: inherit;
-}
-.numerical{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    font-style: inherit;
-   
-}
-.operator{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    font-style: inherit;
-    
-}
-button{
-    width: 80px;
-    height: 80px;
-    border-radius: 3px;
-    font-size: larger;
-    background-color: white;
-    border: none;
-    font-style: inherit;
-    border: 2px;
-    border-style: solid;
-    border-color: black;
-}
-.clear button{
-    height: 40px;
-    width: 165px;
+#clear,#delete{
+    box-sizing: border-box;
+    width: 50%;
+    height: 65px;
+    border: 2px solid black;
+    border-radius: 4px;
     text-align: center;
-    background-color: #f797d9;
-    border: none;
-    font-style: inherit;
-    border: 2px;
-    border-style: solid;
-    border-color: black;
+    font-size: 20px;
 }
-footer{
-    font-size: larger;
-    font-family: 'Roboto',sans-serif;
+#clear{
+    background-color: #faa;
 }
-.hoverable:hover{
-    border-style: solid;
-    border-color: black;
-    border: 3px;
-    background-color: #DCF1F5;
+#delete{
+    background-color: #aaf;
+}
+.main-body{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 100%;
+    padding-top: 0px;
+    box-sizing: border-box;
+}
+.main{
+    box-sizing: border-box;
+    width: 21.9%;
+    margin-right: 12px;
+    height: 65px;
+    font-size: 20px;
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 4px;
+    background-color: #eee;
+}
+#plus-op,#minus-op,#div-op,#multi-op{
+    margin-right: 0px;
+}
+button:hover{
+    background-color: #ddd;
+}
+#clear:hover{
+    background-color: #e99;
+}
+#delete:hover{
+    background-color: #99e;
 }
